# api/docs/swagger.json
@@ -40,6 +40,21 @@
                 "responses": {}
             }
         },
+        "/v1/clubs/{id}/users": {
+            "get": {
+                "summary": "クラブに所属しているユーザーを取得する",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "クラブID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/v1/me": {
             "get": {
                 "summary": "自分のユーザー情報を取得する",
